--- a/app1/templates/rooms.html
+++ b/app1/templates/rooms.html
@@ -758,7 +758,7 @@
 
       <div class="room-card">
   <div class="room-image">
-    <img src="{% static 'photo/delux.jpg' %}" alt="Deluxe Bamboo Cottage">
+    <img src="{% static 'photo/delux1.jpg' %}" alt="Deluxe Bamboo Cottage">
     <div class="room-badge">Most Popular</div>
   </div>
 
@@ -805,7 +805,7 @@
 
     <!-- WhatsApp Enquiry Button -->
     <div class="whatsapp-enquiry">
-      <a href="https://wa.me/918606361832?text=Hello%2C%20I%20am%20interested%20in%20booking%20the%20Deluxe%20Bamboo%20Cottage.%20Please%20provide%20more%20details."
+      <a href="https://wa.me/123456789?text=Hello%2C%20I%20am%20interested%20in%20booking%20the%20Deluxe%20Bamboo%20Cottage.%20Please%20provide%20more%20details."
          target="_blank" class="whatsapp-button">
         <i class="fab fa-whatsapp"></i> Enquire on WhatsApp
       </a>
